feat: update books

--- a/docs/books/2021.md
+++ b/docs/books/2021.md
@@ -4,3 +4,28 @@ hide:
   - toc
 ---
 
+| 书名 | 作者 | 读完日期 | 豆瓣评分 |
+|------|------|----------|----------|
+| [微尘](https://book.douban.com/subject/35585201/) | 陈年喜 | 2021-11-24 | 8.7 |
+| [生活蒙太奇](https://book.douban.com/subject/35088492/) | 天然 | 2021-11-16 | 8.9 |
+| 斗贼 | 常书欣 | 2021-07-19 | 8.9 |
+| [爱因斯坦密件](https://book.douban.com/subject/26776239/) | 王晋康 | 2021-11-11 | 8.9 |
+| [追杀K星人](https://book.douban.com/subject/26647632/) | 王晋康 | 2021-11-03 | 8.9 |
+| [命运链](https://book.douban.com/subject/30176156/) | 王晋康 | 2021-10-16 | 8.9 |
+| [转生的巨人](https://book.douban.com/subject/30176145/) | 王晋康 | 2021-10-10 | 8.9 |
+| [新安魂曲](https://book.douban.com/subject/30176143/) | 王晋康 | 2021-10-07 | 8.9 |
+| [少年歌行](https://book.douban.com/subject/30487859/) | 周木楠 | 2020-12-24 | 7.3 |
+| [幸福的勇气](https://book.douban.com/subject/27039296/) | 岸见一郎\|古贺史健 | 2021-09-29 | 8.3 |
+| [被讨厌的勇气](https://book.douban.com/subject/26369699/) | 岸见一郎\|古贺史健 | 2021-08-12 | 8.6 |
+| [漫画科普：比知识有趣的冷知识](https://book.douban.com/subject/34858131/) | 锄见 | 2021-08-10 | 7.1 |
+| [花小烙漫画：原来科普知识这么有趣](https://book.douban.com/subject/35498312/) | 花小烙 | 2021-07-10 | 7.6 |
+| [我的生活不可能那么坏](https://book.douban.com/subject/30191460/) | 河尻圭吾 | 2021-09-04 | 8.3 |
+| [黄昏的男孩](https://book.douban.com/subject/20397280/) | 余华 | 2021-02-07 | 8.2 |
+| [刺杀骑士团长](https://book.douban.com/subject/27199470/) | 村上春树 | 2021-09-03 | 7.5 |
+| [云去云来](https://book.douban.com/subject/26133987/) | 林青霞 | 2021-07-20 | 6.5 |
+| [我在等风，也在等你](https://book.douban.com/subject/27067812/) | 白凝 | 2021-07-12 | 6.1 |
+| [消失的13级台阶](https://book.douban.com/subject/34996429/) | 高野和明 | 2021-07-07 | 8.7 |
+| [高情商聊天术](https://book.douban.com/subject/27196897/) | 张超 | 2021-07-06 | 7.3 |
+| [一读就上瘾的中国史](https://book.douban.com/subject/35152387/) | 温伯陵 | 2021-06-29 | 6.8 |
+| [美国众神](https://book.douban.com/subject/26962859/) | 尼尔·盖曼 | 2021-06-12 | 7.7 |
+| [跑步治愈](https://book.douban.com/subject/35200726/) | 张展晖 | 2021-06-01 | 7.6 |
