--- a/docs/books/2022.md
+++ b/docs/books/2022.md
@@ -4,3 +4,15 @@ hide:
   - toc
 ---
 
+| 书名 | 作者 | 读完日期 | 豆瓣评分 |
+|------|------|----------|----------|
+| [浪潮之巅（第四版）](https://book.douban.com/subject/33474750/) | 吴军 | 2022-12-03 | 9.1 |
+| [少年白马醉春风](https://book.douban.com/subject/35649968/) | 周木楠 | 2022-10-15 | 8.0 |
+| [态度](https://book.douban.com/subject/30346218/) | 吴军 | 2022-10-15 | 8.2 |
+| [黑客与画家](https://book.douban.com/subject/6021440/) | [美] Paul Graham | 2022-09-21 | 8.7 |
+| [曾国藩传](https://book.douban.com/subject/30377678/) | 张宏杰 | 2022-08-11 | 8.7 |
+| [风雨里做个大人，阳光下做个小孩](https://book.douban.com/subject/35296874/) | 一禅小和尚 | 2022-03-10 | 8.3 |
+| [在你们离开以前](https://m.douban.com/book/subject/35553469/) | 毕啸南 | 2022-02-17 | 7.7 |
+| [你当像鸟飞往你的山](https://book.douban.com/subject/33440205/) | 塔拉·韦斯特弗 | 2021-01-11 | 8.7 |
+| [反骗案中案](https://book.douban.com/subject/35272711/) | 常书欣 | 2021-01-01 | 7.5 |
+| [漫画百年党史•开天辟地](https://book.douban.com/subject/35573635/) | 陈磊 | 2021-01-01 | 8.0 |
