--- a/docs/books/2023.md
+++ b/docs/books/2023.md
@@ -4,3 +4,31 @@ hide:
   - toc
 ---
 
+| 书名 | 作者 | 读完日期 | 豆瓣评分 |
+|------|------|----------|----------|
+| [在工作中，看到中国](https://book.douban.com/subject/35796233/) | 网易人间 | 2023-12-06 | 8.2 |
+| [涂乐](https://book.douban.com/subject/34973519/) | 姜末 | 2023-11-28 | 6.9 |
+| [每个人都了不起](https://book.douban.com/subject/36523637/) | 梁永安 | 2023-11-28 | 7.6 |
+| [超新星紀元](https://book.douban.com/subject/3123067/) | 刘慈欣 | 2023-11-28 | 8.5 |
+| [深度关系](https://book.douban.com/subject/36336313/) | 大卫·布拉德福德 | 2023-11-22 | 8.5 |
+| [缉凶](https://book.douban.com/subject/34857264/) | 刘星辰 | 2023-11-21 | 7.1 |
+| [包法利夫人](https://book.douban.com/subject/26666259/) | [法] 福楼拜 | 2023-11-06 | 9.0 |
+| 红蜘蛛1：致命女人案件实录 | 李祉伟 马显明 | 2023-10-20 | - |
+| [蝇王](https://book.douban.com/subject/35764764/) | [英] 威廉·戈尔丁 | 2023-10-30 | 8.1 |
+| [太白金星有点烦](https://book.douban.com/subject/36328704/) | 马伯庸 | 2023-10-14 | 9.0 |
+| [阿Q正传](https://book.douban.com/subject/26639614/) | 鲁迅 | 2023-10-06 | 9.3 |
+| [圣母](https://book.douban.com/subject/30475757/) | [日] 秋吉理香子 | 2023-10-01 | 8.1 |
+| [明天又要上班了](https://book.douban.com/subject/36511561/) | [英] 卡丽娜·马格加 | 2023-09-02 | 6.2 |
+| [时间不是挤出来的，是安排出来的](https://book.douban.com/subject/35899899/) | [英] 阿什莉·惠兰斯 | 2023-09-12 | 7.1 |
+| 深渊：职业警察书写的刑侦悬疑力作 | 深蓝 | 2023-09-10 | - |
+| [国家命运](https://book.douban.com/subject/6976077/) | 陶纯，陈怀国 | 2023-09-01 | 7.7 |
+| [万历十五年](https://book.douban.com/subject/1041482/) | 黄仁宇 | 2023-08-17 | 9.0 |
+| [拆掉思维里的墙](https://book.douban.com/subject/35627156/) | 古典 | 2023-07-08 | 7.4 |
+| [深度工作](https://book.douban.com/subject/27056409/) | [美] 卡尔·纽波特 | 2023-07-05 | 7.8 |
+| [伤心者](https://book.douban.com/subject/26590999/) | 何夕 | 2023-06-26 | 7.6 |
+| [黑客横行](https://book.douban.com/subject/27028961/) | - | 2023-06-07 | 7.6 |
+| [梦之海](https://book.douban.com/subject/26437740/) | 刘慈欣 | 2023-05-31 | 8.4 |
+| [十三层空间](https://book.douban.com/subject/27001144/) | [美] 丹尼尔·加卢耶 | 2023-05-27 | 8.9 |
+| [心灵奇旅 Soul](https://book.douban.com/subject/35288960/) | 皮克斯/迪士尼 | 2023-03-04 | 8.1 |
+| [历史的面孔](https://book.douban.com/subject/35304871/) | 徐涛 | 2023-02-04 | 7.7 |
+| [Python工匠](https://book.douban.com/subject/35723705/) | 朱雷（@piglei） | 2023-01-07 | 9.2 |
