--- a/docs/books/2024.md
+++ b/docs/books/2024.md
@@ -4,3 +4,29 @@ hide:
   - toc
 ---
 
+| 书名 | 作者 | 读完日期 | 豆瓣评分 / 微信读书推荐值 |
+|------|------|----------|---------------------------|
+| [宝贵的人生建议](https://book.douban.com/subject/36530548/) | [美] 凯文·凯利 | 2024-12-25 | 7.7 |
+| [女人这东西](https://book.douban.com/subject/4262114/) | 渡边淳一 | 2024-11-15 | 6.4 |
+| [打造第二大脑](https://book.douban.com/subject/36636224/) | [美] 蒂亚戈•福特 | 2024-10-29 | 8.0 |
+| [手机断舍离](https://book.douban.com/subject/36956882/) | [美] 凯瑟琳·普赖斯 | 2024-10-21 | 6.6 |
+| [大教堂与集市](https://book.douban.com/subject/25881855/) | [美] Eric S. Raymond | 2024-09-30 | 8.4 |
+| [差点就发财了](https://weread.qq.com/web/reader/58232070813ab8ecfg013b93#outline) | 全民故事计划主编 | 2024-09-29 | 值得一读 |
+| [你被骗了，快跑](https://yd.qq.com/web/reader/d3e320b0813ab926bg0166ea) | 全民故事计划主编 | 2024-09-09 | - |
+| [高智商犯罪1：设局](https://yd.qq.com/web/bookDetail/461322d0725668eb461bb79) | 紫金陈 | 2024-08-11 | - |
+| [重案检察官](https://weread.qq.com/web/bookDetail/67f321b0813ab8a15g011b9c) | 左权 | 2024-08-02 | - |
+| [毛骗局中局：贪便宜背后的高端骗局](https://weread.qq.com/web/bookDetail/e4a32960813ab89c3g01927f) | 周述 | 2024-07-29 | - |
+| [山](https://weread.qq.com/web/bookDetail/ac132cd071a2727bac1b359) | 刘慈欣 | 2024-07-23 | 神作 |
+| [带上她的眼睛](https://book.douban.com/subject/1170539/) | 刘慈欣 | 2024-06-26 | 8.6 |
+| [Python工匠](https://book.douban.com/subject/35723705/) | 朱雷（@piglei） | 2024-05-30 | 9.1 |
+| [亲密关系管理](https://book.douban.com/subject/35367114/) | 陈历杰 | 2024-05-06 | 6.6 |
+| [软能力](https://book.douban.com/subject/35922870/) | 吴军 | 2024-04-23 | 7.7 |
+| [长夜难明 : 双星](https://book.douban.com/subject/36480672/) | 紫金陈 | 2024-03-13 | 7.0 |
+| [看见情绪价值](https://book.douban.com/subject/36075434/) | 苏菲雅 / 姚彦宇 | 2024-03-05 | 7.4 |
+| [为什么和你说话这么累](https://book.douban.com/subject/36068004/) | [韩] 朴宰莲 | 2024-03-05 | 7.5 |
+| [赡养人类](https://book.douban.com/subject/26807576/) | 刘慈欣 | 2024-03-01 | 8.6 |
+| [长夜难明](https://book.douban.com/subject/26923390/) | 紫金陈 | 2024-03-01 | 8.6 |
+| [坏小孩](https://book.douban.com/subject/25955474/) | 紫金陈 | 2024-03-01 | 7.3 |
+| [无证之罪](https://book.douban.com/subject/25799686/) | 紫金陈 | 2024-03-01 | 7.2 |
+| 红蜘蛛II：致命女人案件实录 | 李祉伟 | 2024-02-16 | - |
+| 无用且恶心的人体趣味冷知识 | [英] 弗朗西斯·古德 | 2024-01-21 | - |
