--- a/docs/books/2025.md
+++ b/docs/books/2025.md
@@ -4,3 +4,37 @@ hide:
   - toc
 ---
 
+| 书名 | 作者 | 读完日期 | 豆瓣评分 / 微信读书推荐值 |
+|------|------|----------|---------------------------|
+| [短剧时代：流量、成瘾与被瓦解的人](https://weread.qq.com/web/bookDetail/4d032360813aba518g013d9c) | 正面连接 洪蔚琳 | 2025-12-05 | 83.0% |
+| [没钱的北漂年轻人，直接住进公司里](https://weread.qq.com/web/bookDetail/231321e0813ab9e0cg011619) | 故事FM Michelle Jack 罗奇 | 2025-12-01 | 74.5% |
+| [52个偷拍的男人，和被他们伤害的女性](https://weread.qq.com/web/bookDetail/a4f32f20813aba4adg01559a) | 正面连接 洪蔚琳 | 2025-11-30 | 71.0% |
+| [老无所依：买保健品换来的儿子](https://weread.qq.com/web/reader/34a32540813ab95d9g0122f2) | 全民故事计划主编 | 2025-11-19 | 74.4% |
+| [我看见的世界](https://book.douban.com/subject/36672955/) | 李飞飞 | 2025-11-16 | 8.9 |
+| [为房痴狂：16位房产经纪人口述实录](https://weread.qq.com/web/reader/21932190813ab9be7g012e7f) | 刘青松 | 2025-11-13 | 71.6% |
+| [除夕夜，我在看守所管教一群失足女（轻纪实）](https://weread.qq.com/web/reader/21932190813ab9be7g012e7f) | 闻音 | 2025-09-22 | 73.6% |
+| [考公失败，在农村当“废物”（轻纪实）](https://weread.qq.com/web/bookDetail/663323d0813ab9b91g013ca3) | 知音真实故事 李玉 | 2025-09-06 | 83.6% |
+| [农村学生考上北大后](https://weread.qq.com/web/bookDetail/9d032840813ab9b4ag0100cf) | 谷雨实验室 | 2025-09-06 | 75.4% |
+| [一群穷孩子的人生实验（轻纪实）](https://weread.qq.com/web/bookDetail/88332a70813ab9c22g016fd8) | 《人物》杂志 林松果 | 2025-09-06 | 88.9% |
+| [三和大神：第一逆袭仔红牛哥（轻故事）](https://weread.qq.com/web/bookDetail/f6232dc0813ab9cddg01883a) | 黑暗森林 | 2025-09-06 | 71.4% |
+| [为什么我们相信阴谋论](https://weread.qq.com/web/reader/5da32ca0813ab8bc3g015a3c#outline?noScroll=1) | [西班牙] 拉蒙·诺格拉斯 | 2025-08-26 | 75.9% |
+| [100个小众职业故事集](https://weread.qq.com/web/bookDetail/6d832b40813ab9a86g01102d) | 悄月白 筱宁 红袖添乱 张守广等 | 2025-08-26 | 72.6% |
+| [朱雀堂](https://book.douban.com/subject/26628148/) | 鬼马星 | 2025-07-21 | 7.4 |
+| [在夜场，不缺有故事的人](https://weread.qq.com/web/bookDetail/d4232960813ab9c90g01357e) | 栗子酱 | 2025-07-21 | 76% |
+| [秀场直播女主播的“绝望劳动” （轻纪实）](https://weread.qq.com/web/reader/22932040813ab99b8g010ff4#outline?noScroll=1) | 谷雨实验室 陈晓妍 | 2025-07-20 | 82.0% |
+| [外卖员和保安的生死劫](https://weread.qq.com/web/reader/22932040813ab99b8g010ff4#outline?noScroll=1) | 刘婷 | 2025-07-10 | 72.5% |
+| [那些被PUA绑架的人生（轻纪实）](https://weread.qq.com/web/reader/e9832960813ab9d69g015c8b#outline?noScroll=1) | 《人物》杂志 罗婷 | 2025-07-02 | 70.9% |
+| [县城媒婆：带找不到对象的男性跨省相亲](https://weread.qq.com/web/reader/ce532d70813ab9af4g014af3#outline?noScroll=1) | 谷雨实验室 周甜 | 2025-06-30 | 75.9% |
+| [非洲异闻录](https://read.douban.com/ebook/630328326/) | 周异客 | 2025-06-24 | - |
+| [马诺 代价（轻纪实）](https://weread.qq.com/web/bookDetail/457325d0813ab9c83g017355) | 《人物》 | 2025-06-24 | 80.7% |
+| [废物俱乐部：三和日结手记](https://www.weibo.com/ttarticle/p/show?id=2309404233756507518449) | 故事硬核 | 2025-06-22 | - |
+| [长安的荔枝](https://www.douban.com/personage/27494617/) | 马伯庸 | 2025-06-14 | 8.5 |
+| [Python Cookbook](https://book.douban.com/subject/20491078/) | David Beazley / Brian K. Jones | 2025-06-03 | 9.2 |
+| [流畅的Python](https://book.douban.com/subject/27028517/) | [巴西] Luciano Ramalho | 2025-05-27 | 9.4 |
+| [一九八四](https://book.douban.com/subject/3815131/) | [英国] 乔治·奥威尔 | 2025-05-27 | 9.5 |
+| [地狱门前](https://book.douban.com/subject/1187523/) | 乔云华 | 2025-05-21 | 7.3 |
+| [外卖骑手,困在系统里](https://weread.qq.com/web/reader/a0c323c0813ab9c32g0177c0#outline?noScroll=1) | 《人物》 | 2025-03-27 | 92.1% |
+| [金瓶梅](https://book.douban.com/subject/26877943/) | 兰陵笑笑生 | 2025-03-25 | 9.5 |
+| [变态犯罪：电影背后反人性的真实案件](https://weread.qq.com/web/reader/9d232470813ab986bg012b5d) | 8年级毕业生 | 2025-02-21 | - |
+| [Git团队协作](https://book.douban.com/subject/27046286/) | [加] Emma Jane Hogbin Westby | 2025-01-12 | 6.8 |
+| [程序员的README](https://book.douban.com/subject/36457109/) | [美] 克里斯·里科米尼 / [美] 德米特里·里亚博伊 | 2025-02-01 | 8.6 |
