--- a/docs/videos/2026.md
+++ b/docs/videos/2026.md
@@ -7,5 +7,6 @@ hide:
 
 | 片名 | 类型 | 豆瓣评分 |
 |------|------|----------|
+|[子弹列车](https://movie.douban.com/subject/35118954/) | 喜剧 / 动作 / 惊悚 | 7.8 |
 |[绝命毒师 第一季](https://movie.douban.com/subject/2373195/) | 剧情 / 家庭 | 8.3 |
 | [天才少女 Gifted](https://movie.douban.com/subject/26593587/) | 剧情 / 家庭 | 8.3 |
