--- a/docs/videos/2026.md
+++ b/docs/videos/2026.md
@@ -7,6 +7,7 @@ hide:
 
 | 片名 | 类型 | 豆瓣评分 |
 |------|------|----------|
+|[鬼灭之刃 剧场版 无限列车篇](https://movie.douban.com/subject/34845781/) | 动画 | 7.9 |
 |[子弹列车](https://movie.douban.com/subject/35118954/) | 喜剧 / 动作 / 惊悚 | 7.8 |
 |[绝命毒师 第一季](https://movie.douban.com/subject/2373195/) | 剧情 / 家庭 | 8.3 |
 | [天才少女 Gifted](https://movie.douban.com/subject/26593587/) | 剧情 / 家庭 | 8.3 |
