--- a/docs/books/2026.md
+++ b/docs/books/2026.md
@@ -4,3 +4,6 @@ hide:
   - toc
 ---
 
+| 书名 | 作者 | 读完日期 | 豆瓣评分 / 微信读书推荐值 |
+|------|------|----------|---------------------------|
+|[下班后开始新的一天](https://book.douban.com/subject/36021556/)|[韩]柳韩彬|2026-01-27|6.9|
