docs: add 上帝之手 and 乐仁堂药膳

--- a/docs/delicacy/2026.md
+++ b/docs/delicacy/2026.md
@@ -4,8 +4,9 @@ hide:
   - toc
 ---
 
-| 馆子 | 日期 |
-|------|------|
-|闽南咸饭店|2026-01-18|
-|四川泸州小吃|2026-01-10|
-|沙胆彪牛杂煲|2026-01-01|
+| 馆子 | 日期 |主要吃的|
+|------|------|------|
+|乐仁堂药膳|2026-02-08|牛肉汤|
+|闽南咸饭店|2026-01-18|咸饭|
+|四川泸州小吃|2026-01-10|炒肝|
+|沙胆彪牛杂煲|2026-01-01|牛杂煲|
