docs: update files

--- a/docs/life/delicacy/2026.md
+++ b/docs/life/delicacy/2026.md
@@ -6,6 +6,7 @@ hide:
 
 | 馆子 | 日期 |主要吃的|
 |------|------|------|
+|沙胆彪牛杂煲|2026-02-22|牛杂煲|
 |乐仁堂药膳|2026-02-08|牛肉汤|
 |闽南咸饭店|2026-01-18|咸饭|
 |四川泸州小吃|2026-01-10|炒肝|
