--- a/docs/life/books/2026.md
+++ b/docs/life/books/2026.md
@@ -6,4 +6,5 @@ hide:
 
 | 书名 | 作者 | 读完日期 | 豆瓣评分 / 微信读书推荐值 |
 |------|------|----------|---------------------------|
+|[没考上高中的孩子去哪了](https://weread.qq.com/web/reader/d3f325a0813ab9d48g01743f)|真实故事计划 周婧|2026-02-23|75%|
 |[下班后开始新的一天](https://book.douban.com/subject/36021556/)|[韩]柳韩彬|2026-01-27|6.9|
